# lmgame_train_reorg

./: .gitignore  .gitmodules  DEVELOPMENT.md  LICENSE  README.md  SYSTEMDESIGN.md  agent_test_script.sh  credentials.sh  env_setup.sh  eval.sh  print_config.py  pyproject.toml  quick_train_qwen_halfb.sh  requirements.txt  setup.py  setup_log.txt  test_modules.sh  train.py  train_custom_qwen_7b.sh  train_custom_qwen_half_b.sh  train_sokoban.sh  train_sokoban_example.sh  train_sokoban_multimodal.sh  wandb_test.py
LMGameRL/: __init__.py  train.py
LMGameRL/agents/: __init__.py  agent_utils.py  base_agent.py  base_env.py
LMGameRL/rollout/: sync_multi_turn_rollout.py
agents/: __init__.py  agent_utils.py  base_agent.py
agents/birdAgent/: agent.py  env.py
agents/blocksworldAgent/: agent.py  env.py
agents/gsm8kAgent/: agent.py  env.py
agents/sokobanAgent/: agent.py  env.py  utils.py
agents/tetrisAgent/: agent.py  env.py
agents/webshopAgent/: agent.py  env.py  run_env.sh
computer_use/: README.md
config/: _7_gsm8k.yaml  _multimodal_sokoban.yaml  base.yaml  envs.yaml  ppo_trainer.yaml
configs/: agents.yaml  base.yaml  base_example.yaml  config_sample.txt  custom_qwen_7b_train.yaml  custom_qwen_half_b.yaml  custom_qwen_half_b_train.yaml  ppo_trainer.yaml  quick_train_qwen_halfb_config.yaml
eval/: lmgame_Bench_Evaluation_Pipeline.ipynb  notebook_utils.py  replay_utils.py  video_generation_script.py
eval/assets/: model_colors.json
eval/configs/: eval_config.yaml  game_eval_config.yaml
examples/quick_run/: quick_train_qwen_halfb.sh  quick_train_qwen_halfb_config.yaml
examples/sokoban/: custom_qwen_7b_train.yaml
examples/sokoban_ppo/: qwen_7b.sh  qwen_halfb.sh
examples/tetris/: custom_qwen_7b_train.yaml  train_custom_qwen_half_b.sh
examples/tetris_ppo/: qwen_7b.sh  qwen_halb.sh
gamingagent/: Development.md
gamingagent/agents/: base_agent.py
gamingagent/configs/: model_config.json
gamingagent/envs/: README.md  __init__.py  env_utils.py  gym_env_adapter.py
gamingagent/modules/: __init__.py  base_module.py  core_module.py  memory_module.py  perception_module.py  prompt_graph.py  reasoning_module.py
lmgame/: eval.py
lmgame-bench/: README.md  custom_runner.py  evaluate_all.sh  run.py
lmgame/env/: __init__.py
lmgame/llm_agent/: agent_proxy.py  ctx_manager.py  ctx_manager_text_bakcup.py  es_manager.py
lmgame/trainer/: agent_trainer.py
lmgamerl/: train.py  train_custom_qwen_7b.sh
lmgamerl/agents/: __init__.py  base_agent.py
lmgamerl/rollout/: sync_multi_turn_rollout.py
ragen/: eval.py
ragen/llm_agent/: agent_proxy.py  es_manager.py
ragen/trainer/: agent_trainer.py
ragen/workers/: fsdp_workers.py
rollout/: sync_multi_turn_rollout.py
rollout/rollout_tests/: sync_multi_turn_rollout_test.py
scripts/: install_submodules.py  install_submodules.sh  load_dataset.py  load_dataset.sh  setup.sh
tests/: run_tests.sh  test_run.py
tests/birdAgent_tests/: agent_test.py  env_test.py  run_env.sh
tests/blocksworldAgent_tests/: agent_test.py  env_test.py
tests/blocksworld_tests/: run_test.sh
tests/gsm8kAgent_tests/: agent_test.py  env_test.py
tests/gsm8k_tests/: agent_test.py
tests/pokemon_red_test/: test_game_env.py
tests/rollout_tests/: rollout_test_utils.py  sync_multi_turn_rollout_test.py
tests/sokobanAgent_tests/: agent_test.py  env_test.py
tests/tetrisAgent_tests/: agent_test.py  env_test.py
tests/tetris_tests/: agent_test.py
tests/webshopAgent_tests/: env_test.py  run_test.sh
tools/: utils.py
tools/modal/: serve_instance.py  (+1 more)
train/: .gitignore  README.md  train_sokoban.sh
trainer/: agent_trainer.py
(+137 files in other folders)
